[project]
name = "gwt-test-framework"
version = "0.1.0"
description = "A Python framework for declaring Given-When-Then tests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.0.1",
]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["migrations"]

lint.ignore = [
    "E501", # Line too long (handled by line-length)
]

lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "DJ"  # Django-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["django_project"]
known-third-party = ["django"]

